apps/ben-clock/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ben-clock
  labels:
    pod-security.kubernetes.io/enforce: baseline
