apps/ben-clock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ben-clock
spec:
  selector:
    app.kubernetes.io/name: ben-clock
  ports:
    - name: http
      port: 80
      targetPort: http
